soap spbx inicio implementacao

--- a/.env
+++ b/.env
@@ -6,8 +6,9 @@
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 DATABASE_URL="file:./dev.db"
-SOAP_URI="http://www.dneonline.com/calculator.asmx?WSDL"
-SOAP_USERNAME="username"
-SOAP_PASSWORD="password"
+SOAP_CALCULATOR_URI="http://www.dneonline.com/calculator.asmx?WSDL"
+SOAP_SPBX_URI="http://www.dneonline.com/calculator.asmx"
+SOAP_SPBX_USERNAME="username"
+SOAP_SPBX_PASSWORD="password"
 HTTP_TIMEOUT="5000"
 HTTP_MAX_REDIRECTS="5"
