first units test

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 DATABASE_URL="file:./dev.db"
 SOAP_CALCULATOR_URI="http://www.dneonline.com/calculator.asmx?WSDL"
-SOAP_SPBX_URI="http://www.dneonline.com/calculator.asmx"
+SOAP_SPBX_URI="http://soaup.ficticio.com"
 SOAP_SPBX_USERNAME="username"
 SOAP_SPBX_PASSWORD="password"
 HTTP_TIMEOUT="5000"
