--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,12 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+
 # environment
-.env
+.env*
+
+# prisma sqlite db
+/prisma/dev.db*
 
 # OS
 .DS_Store
